changed evaluation metrics

--- a/Case-Study-Solution.ipynb
+++ b/Case-Study-Solution.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
     "from sklearn.naive_bayes import MultinomialNB\n",
     "from sklearn.svm import LinearSVC\n",
     "from sklearn.multiclass import OneVsRestClassifier\n",
-    "from sklearn.metrics import jaccard_score, roc_auc_score, hamming_loss\n",
+    "from sklearn.metrics import jaccard_score, roc_auc_score, hamming_loss, precision_score, recall_score, f1_score\n",
     "from transformers import AutoTokenizer, AutoModel, get_scheduler\n",
     "import torch.nn as nn\n",
     "from tqdm.auto import tqdm\n",
@@ -1049,7 +1049,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1061,7 +1061,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -1085,7 +1085,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -1216,7 +1216,7 @@
        "[63159 rows x 3 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1234,7 +1234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1246,7 +1246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -1258,7 +1258,7 @@
        "Name: Tags, dtype: object"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1269,7 +1269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1280,7 +1280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1296,7 +1296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1306,7 +1306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1316,14 +1316,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(50533, 2000) (12634, 2000) (50533, 100) (12634, 100)\n"
+      "(50527, 2000) (12632, 2000) (50527, 100) (12632, 100)\n"
      ]
     }
    ],
@@ -1356,21 +1356,21 @@
      "output_type": "stream",
      "text": [
       "Classifier:  LogisticRegression(max_iter=1000, random_state=42)\n",
-      "Jaccard Similarity Score:  45.137459764656214\n",
-      "ROC-AUC Score:  74.20748861026848\n",
-      "Hamming Loss:  1.033560234288428\n",
+      "Jaccard Similarity Score:  45.29475406375343\n",
+      "Recall:  44.75743348982786\n",
+      "F1 Score:  58.11484006292606\n",
       "\n",
       "\n",
       "Classifier:  MultinomialNB()\n",
-      "Jaccard Similarity Score:  37.840294895859245\n",
-      "ROC-AUC Score:  71.95083930173146\n",
-      "Hamming Loss:  1.219724552794048\n",
+      "Jaccard Similarity Score:  38.107593338158566\n",
+      "Recall:  41.72345903377253\n",
+      "F1 Score:  52.361493870569234\n",
       "\n",
       "\n",
       "Classifier:  LinearSVC()\n",
-      "Jaccard Similarity Score:  49.275499973616164\n",
-      "ROC-AUC Score:  76.88835418514248\n",
-      "Hamming Loss:  1.0148804812410956\n",
+      "Jaccard Similarity Score:  49.504960945746255\n",
+      "Recall:  49.82583674087536\n",
+      "F1 Score:  60.99746616401952\n",
       "\n",
       "\n"
      ]
@@ -1386,10 +1386,10 @@
     "\n",
     "    jaccard = jaccard_score(Y_test, Y_pred, average = 'samples')\n",
     "    print(\"Jaccard Similarity Score: \", jaccard * 100)\n",
-    "    roc_auc = roc_auc_score(Y_test, Y_pred, average = 'samples')\n",
-    "    print(\"ROC-AUC Score: \", roc_auc * 100)\n",
-    "    hamming_loss_val = hamming_loss(Y_test, Y_pred)\n",
-    "    print(\"Hamming Loss: \", hamming_loss_val * 100)\n",
+    "    recall = recall_score(Y_test, Y_pred, average='micro')\n",
+    "    print(\"Recall: \", recall * 100)\n",
+    "    f1 = f1_score(Y_test, Y_pred, average='micro')\n",
+    "    print(\"F1 Score: \", f1 * 100)\n",
     "    print(\"\\n\")"
    ]
   },
@@ -1402,7 +1402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -1482,7 +1482,7 @@
        "4  work collection class use video playback recor...  [c++, oop, class]  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1493,7 +1493,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -1513,15 +1513,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Map: 100%|██████████| 50527/50527 [00:04<00:00, 11121.20 examples/s]\n",
-      "Map: 100%|██████████| 12632/12632 [00:01<00:00, 12519.20 examples/s]\n"
+      "Map: 100%|██████████| 50527/50527 [00:05<00:00, 9987.55 examples/s] \n",
+      "Map: 100%|██████████| 12632/12632 [00:01<00:00, 10588.42 examples/s]\n"
      ]
     }
    ],
@@ -1540,7 +1540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -1553,7 +1553,7 @@
        " 'Text': 'impersonation work user specificed issue access webservice impersonate without specify user work identity impersonatetrue usernamedomainusername passwordmypassword work identity impersonatetrue debug use code verifiy correct domain username use systemsecurityprincipalwindowsidentitygetcurrentname webconfig authentication modewindows identity impersonatetrue authorization allow user deny user authorization log prompt image idea work specify user webconfig log domainusername password put identity impersonatetrue usernamedomainusername passwordmypassword try multiple account work put credential webconfig none work identity set asidentity impersonatetrue logging edit remote server return error 403 forbidden edit 2 everything work fine debug hit service server contain ii host try multiple account work everything domain'}"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1564,20 +1564,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Map: 100%|██████████| 50527/50527 [00:44<00:00, 1147.66 examples/s]\n",
-      "Map: 100%|██████████| 12632/12632 [00:11<00:00, 1105.99 examples/s]\n"
+      "Map: 100%|██████████| 50527/50527 [00:49<00:00, 1025.70 examples/s]\n",
+      "Map: 100%|██████████| 12632/12632 [00:12<00:00, 1029.13 examples/s]\n"
      ]
     }
    ],
    "source": [
-    "#Use Tokenizer from pre-trained BERT model. The max length shows how many words we consider as the max words we will keep from a text. If less, we will pad with zeros. If more, we will cut the remaining text.\n",
+    "#Use Tokenizer from pre-trained BERT model. The max length shows how many words we consider as the max words we will keep from a text. \n",
+    "#If less, we will pad with zeros. If more, we will cut the remaining text.\n",
     "tokenizer = AutoTokenizer.from_pretrained('bert-base-cased')\n",
     "max_length = 128\n",
     "\n",
@@ -1590,7 +1591,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1609,7 +1610,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1618,7 +1619,7 @@
        "100"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1630,7 +1631,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1662,20 +1663,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'input_ids': tensor([  101, 24034, 18608,  1891,  1250,  4795,  2747,  1174,  2486,  2469,\n",
+       "          5127,  6906, 14301, 24034, 18608,  2193,  1443, 22829,  4795,  1250,\n",
+       "          4193, 24034, 18608,  2193, 18062,  4175,  4795, 24499,  7903, 12376,\n",
+       "         10449, 16470, 25241,  4527, 11229, 12565,  1250,  4193, 24034, 18608,\n",
+       "          2193, 18062,  4175,  1260,  7925,  1403,  1329,  3463,  1396,  2047,\n",
+       "          8702,  1183,  5663,  5777,  4795, 16124,  1329,  2344, 10294, 20172,\n",
+       "          1643,  4854,  6617, 12320, 11129, 11997, 26859,  3121,  2340, 16609,\n",
+       "         21754, 16124,  5127,  7235,  8702,  1403, 16047,  1891,  5418, 11129,\n",
+       "         11997,  4193, 24034, 18608,  2193, 18062,  4175, 25279,  2621,  4795,\n",
+       "          9762,  4795, 25279,  9366,  5250, 18378,  3077,  1911,  1250, 22829,\n",
+       "          4795,  5127,  7235,  8702,  1403,  9366,  5777, 19399, 16124, 25241,\n",
+       "          1508,  4193, 24034, 18608,  2193, 18062,  4175,  4795, 24499,  7903,\n",
+       "         12376, 10449, 16470, 25241,  4527, 11229, 12565,   102]),\n",
+       " 'token_type_ids': tensor([0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
+       "         0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
+       "         0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
+       "         0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
+       "         0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
+       "         0, 0, 0, 0, 0, 0, 0, 0]),\n",
+       " 'attention_mask': tensor([1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
+       "         1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
+       "         1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
+       "         1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
+       "         1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
+       "         1, 1, 1, 1, 1, 1, 1, 1]),\n",
+       " 'labels': tensor([0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
+       "         0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
+       "         0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
+       "         0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
+       "         0, 0, 0, 0])}"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "hg_train_data[0]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Creating our model. Using the pretrained model, and add a classifier head (linear layer) to match our output size. Need some pooling to discard the hidden size (128) and bring our outputs to the shape we need.\n",
+    "#Creating our model. Using the pretrained model, and add a classifier head (linear layer) to match our output size. \n",
+    "#Need some pooling to discard the hidden size (128) and bring our outputs to the shape we need.\n",
     "class MultiLabelModel(nn.Module):\n",
     "    def __init__(self, base_model, num_labels):\n",
     "        super(MultiLabelModel, self).__init__()\n",
@@ -1695,7 +1737,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1737,11 +1779,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Function that will used for the evaluation of the model. If the probability of class is more than 0.5, then the prediction is 1. Returns all the predicted labels, and also the real ones.\n",
+    "#Function that will used for the evaluation of the model. If the probability of class is more than 0.5, then the prediction is 1.\n",
+    "# Returns all the predicted labels, and also the real ones.\n",
     "def inference(model, test_dl, device,  threshold = 0.5):\n",
     "    model.eval()\n",
     "\n",
@@ -1769,45 +1812,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "                                                               \r"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch 1/2, Average Loss is: 0.0643\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "                                                               "
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch 2/2, Average Loss is: 0.0393\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\r"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#empties cuda cache memory\n",
     "torch.cuda.empty_cache()\n",
@@ -1817,13 +1824,17 @@
     "test_dl = DataLoader(hg_test_data, batch_size=4)\n",
     "\n",
     "#Setting number of epochs.\n",
-    "epochs = 2\n",
+    "epochs = 10\n",
     "\n",
     "#Total of training steps that will be followed in the whole training\n",
     "training_steps = epochs * len(train_dl)\n",
     "\n",
     "#Creating the model\n",
     "model = MultiLabelModel('bert-base-cased', num_labels=100)\n",
+    "\n",
+    "# #Load saved model\n",
+    "# model_load_path = '../models/trained_multi_label_model.pth'\n",
+    "# model.load_state_dict(torch.load(model_load_path))\n",
     "\n",
     "#Setting the optimizer to AdamW\n",
     "optimizer = AdamW(params=model.parameters(), lr=5e-6)\n",
@@ -1851,13 +1862,13 @@
    "outputs": [],
    "source": [
     "#Save trained model to my disk\n",
-    "model_save_path = '../trained_multi_label_model.pth'\n",
+    "model_save_path = '../models/trained_multi_label_model.pth'\n",
     "torch.save(model.state_dict(), model_save_path)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -1866,14 +1877,14 @@
        "<All keys matched successfully>"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "#Load saved model\n",
-    "model_load_path = '../trained_multi_label_model.pth'\n",
+    "model_load_path = '../models/trained_multi_label_model.pth'\n",
     "model = MultiLabelModel('bert-base-cased', num_labels=100)\n",
     "model.load_state_dict(torch.load(model_load_path))"
    ]
@@ -1916,14 +1927,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Evaluation: 100%|██████████| 3158/3158 [01:36<00:00, 32.79it/s]\n"
+      "Evaluation: 100%|██████████| 3158/3158 [01:37<00:00, 32.38it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The Jaccard Similarity Score of Test Set is: 0.5210894855092132\n",
+      "The Hamming Loss of Test Set is:  0.011711526282457252\n"
      ]
     }
    ],
@@ -1935,11 +1954,43 @@
     "\n",
     "predicted_labels, real_labels = inference(model, test_dl, device)\n",
     "\n",
-    "jaccard_scores = [jaccard_score(real, pred, average='samples') for real, pred in zip(real_labels, predicted_labels)]\n",
+    "real = np.array(real_labels).reshape(len(real_labels)*4, 100)\n",
+    "pred = np.array(predicted_labels).reshape(len(predicted_labels)*4,100)\n",
     "\n",
-    "average_jaccard = np.mean(jaccard_scores)\n",
+    "jaccard = jaccard_score(real, pred, average='samples')\n",
+    "recall = recall_score(real, pred, average='micro')\n",
+    "f1_score = f1_score(real, pred, average='micro')\n",
     "\n",
-    "print(\"Average Jaccard Similarity Score of Test Set is:\", average_jaccard)"
+    "print(\"The Jaccard Similarity Score of Test Set is:\", jaccard)\n",
+    "print(\"The Recall of Test Set is: \", recall)\n",
+    "print(\"The F1 Score of Test Set is: \", f1_score)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Evaluation: 100%|██████████| 3158/3158 [01:39<00:00, 31.88it/s]\n"
+     ]
+    }
+   ],
+   "source": [
+    "train_dl = DataLoader(hg_train_data, shuffle=True, batch_size = 4)\n",
+    "test_dl = DataLoader(hg_test_data, batch_size=4)\n",
+    "\n",
+    "device = torch.device(\"cuda\") if torch.cuda.is_available() else torch.device(\"cpu\")\n",
+    "\n",
+    "model.to(device)\n",
+    "\n",
+    "predicted_labels, real_labels = inference(model, test_dl, device)\n",
+    "\n",
+    "real = np.array(real_labels).reshape(len(real_labels)*4, 100)\n",
+    "pred = np.array(predicted_labels).reshape(len(predicted_labels)*4,100)"
    ]
   },
   {
