minor errors fix

--- a/Case-Study-Solution.ipynb
+++ b/Case-Study-Solution.ipynb
@@ -1,13 +1,6 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Task 2.1 EDA:"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -43,6 +36,13 @@
     "from torch.utils.data import DataLoader\n",
     "\n",
     "from datasets import Dataset"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Task 2.1 EDA:"
    ]
   },
   {
@@ -1402,7 +1402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -1482,7 +1482,7 @@
        "4  work collection class use video playback recor...  [c++, oop, class]  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1493,7 +1493,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -1513,15 +1513,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Map: 100%|██████████| 50527/50527 [00:05<00:00, 9987.55 examples/s] \n",
-      "Map: 100%|██████████| 12632/12632 [00:01<00:00, 10588.42 examples/s]\n"
+      "Map: 100%|██████████| 50527/50527 [00:05<00:00, 9575.50 examples/s] \n",
+      "Map: 100%|██████████| 12632/12632 [00:01<00:00, 10500.37 examples/s]\n"
      ]
     }
    ],
@@ -1540,7 +1540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -1553,7 +1553,7 @@
        " 'Text': 'impersonation work user specificed issue access webservice impersonate without specify user work identity impersonatetrue usernamedomainusername passwordmypassword work identity impersonatetrue debug use code verifiy correct domain username use systemsecurityprincipalwindowsidentitygetcurrentname webconfig authentication modewindows identity impersonatetrue authorization allow user deny user authorization log prompt image idea work specify user webconfig log domainusername password put identity impersonatetrue usernamedomainusername passwordmypassword try multiple account work put credential webconfig none work identity set asidentity impersonatetrue logging edit remote server return error 403 forbidden edit 2 everything work fine debug hit service server contain ii host try multiple account work everything domain'}"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1564,15 +1564,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Map: 100%|██████████| 50527/50527 [00:49<00:00, 1025.70 examples/s]\n",
-      "Map: 100%|██████████| 12632/12632 [00:12<00:00, 1029.13 examples/s]\n"
+      "Map: 100%|██████████| 50527/50527 [00:49<00:00, 1021.96 examples/s]\n",
+      "Map: 100%|██████████| 12632/12632 [00:12<00:00, 1026.31 examples/s]\n"
      ]
     }
    ],
@@ -1591,7 +1591,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1610,7 +1610,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -1619,7 +1619,7 @@
        "100"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1631,7 +1631,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -1663,7 +1663,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -1701,7 +1701,7 @@
        "         0, 0, 0, 0])}"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1712,7 +1712,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1737,7 +1737,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1779,7 +1779,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1812,9 +1812,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "                                                            \r"
+     ]
+    },
+    {
+     "ename": "RuntimeError",
+     "evalue": "CUDA out of memory. Tried to allocate 86.00 MiB (GPU 0; 6.00 GiB total capacity; 4.86 GiB already allocated; 0 bytes free; 5.29 GiB reserved in total by PyTorch) If reserved memory is >> allocated memory try setting max_split_size_mb to avoid fragmentation.  See documentation for Memory Management and PYTORCH_CUDA_ALLOC_CONF",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\papch\\OneDrive\\Υπολογιστής\\Applications\\Interviews\\Satori Analytics\\Case Study\\Stack-Overflow-Tag-Prediction\\Case-Study-Solution.ipynb Cell 65\u001b[0m in \u001b[0;36m<cell line: 35>\u001b[1;34m()\u001b[0m\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/papch/OneDrive/%CE%A5%CF%80%CE%BF%CE%BB%CE%BF%CE%B3%CE%B9%CF%83%CF%84%CE%AE%CF%82/Applications/Interviews/Satori%20Analytics/Case%20Study/Stack-Overflow-Tag-Prediction/Case-Study-Solution.ipynb#Y121sZmlsZQ%3D%3D?line=33'>34</a>\u001b[0m \u001b[39m#Run training for all the epochs, then print the average loss of the epoch.\u001b[39;00m\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/papch/OneDrive/%CE%A5%CF%80%CE%BF%CE%BB%CE%BF%CE%B3%CE%B9%CF%83%CF%84%CE%AE%CF%82/Applications/Interviews/Satori%20Analytics/Case%20Study/Stack-Overflow-Tag-Prediction/Case-Study-Solution.ipynb#Y121sZmlsZQ%3D%3D?line=34'>35</a>\u001b[0m \u001b[39mfor\u001b[39;00m epoch \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(epochs):\n\u001b[1;32m---> <a href='vscode-notebook-cell:/c%3A/Users/papch/OneDrive/%CE%A5%CF%80%CE%BF%CE%BB%CE%BF%CE%B3%CE%B9%CF%83%CF%84%CE%AE%CF%82/Applications/Interviews/Satori%20Analytics/Case%20Study/Stack-Overflow-Tag-Prediction/Case-Study-Solution.ipynb#Y121sZmlsZQ%3D%3D?line=35'>36</a>\u001b[0m     avg_loss \u001b[39m=\u001b[39m train(model, train_dl, optimizer, criterion, device, lr_scheduler)\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/papch/OneDrive/%CE%A5%CF%80%CE%BF%CE%BB%CE%BF%CE%B3%CE%B9%CF%83%CF%84%CE%AE%CF%82/Applications/Interviews/Satori%20Analytics/Case%20Study/Stack-Overflow-Tag-Prediction/Case-Study-Solution.ipynb#Y121sZmlsZQ%3D%3D?line=36'>37</a>\u001b[0m     \u001b[39mprint\u001b[39m(\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mEpoch \u001b[39m\u001b[39m{\u001b[39;00mepoch\u001b[39m+\u001b[39m\u001b[39m1\u001b[39m\u001b[39m}\u001b[39;00m\u001b[39m/\u001b[39m\u001b[39m{\u001b[39;00mepochs\u001b[39m}\u001b[39;00m\u001b[39m, Average Loss is: \u001b[39m\u001b[39m{\u001b[39;00mavg_loss\u001b[39m:\u001b[39;00m\u001b[39m.4f\u001b[39m\u001b[39m}\u001b[39;00m\u001b[39m\"\u001b[39m)\n",
+      "\u001b[1;32mc:\\Users\\papch\\OneDrive\\Υπολογιστής\\Applications\\Interviews\\Satori Analytics\\Case Study\\Stack-Overflow-Tag-Prediction\\Case-Study-Solution.ipynb Cell 65\u001b[0m in \u001b[0;36mtrain\u001b[1;34m(model, train_dl, optimizer, criterion, device, lr_scheduler)\u001b[0m\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/papch/OneDrive/%CE%A5%CF%80%CE%BF%CE%BB%CE%BF%CE%B3%CE%B9%CF%83%CF%84%CE%AE%CF%82/Applications/Interviews/Satori%20Analytics/Case%20Study/Stack-Overflow-Tag-Prediction/Case-Study-Solution.ipynb#Y121sZmlsZQ%3D%3D?line=20'>21</a>\u001b[0m \u001b[39m#backward propagation\u001b[39;00m\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/papch/OneDrive/%CE%A5%CF%80%CE%BF%CE%BB%CE%BF%CE%B3%CE%B9%CF%83%CF%84%CE%AE%CF%82/Applications/Interviews/Satori%20Analytics/Case%20Study/Stack-Overflow-Tag-Prediction/Case-Study-Solution.ipynb#Y121sZmlsZQ%3D%3D?line=21'>22</a>\u001b[0m loss\u001b[39m.\u001b[39mbackward()\n\u001b[1;32m---> <a href='vscode-notebook-cell:/c%3A/Users/papch/OneDrive/%CE%A5%CF%80%CE%BF%CE%BB%CE%BF%CE%B3%CE%B9%CF%83%CF%84%CE%AE%CF%82/Applications/Interviews/Satori%20Analytics/Case%20Study/Stack-Overflow-Tag-Prediction/Case-Study-Solution.ipynb#Y121sZmlsZQ%3D%3D?line=23'>24</a>\u001b[0m optimizer\u001b[39m.\u001b[39;49mstep()\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/papch/OneDrive/%CE%A5%CF%80%CE%BF%CE%BB%CE%BF%CE%B3%CE%B9%CF%83%CF%84%CE%AE%CF%82/Applications/Interviews/Satori%20Analytics/Case%20Study/Stack-Overflow-Tag-Prediction/Case-Study-Solution.ipynb#Y121sZmlsZQ%3D%3D?line=25'>26</a>\u001b[0m \u001b[39mif\u001b[39;00m lr_scheduler:\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/papch/OneDrive/%CE%A5%CF%80%CE%BF%CE%BB%CE%BF%CE%B3%CE%B9%CF%83%CF%84%CE%AE%CF%82/Applications/Interviews/Satori%20Analytics/Case%20Study/Stack-Overflow-Tag-Prediction/Case-Study-Solution.ipynb#Y121sZmlsZQ%3D%3D?line=26'>27</a>\u001b[0m     lr_scheduler\u001b[39m.\u001b[39mstep()\n",
+      "File \u001b[1;32mc:\\Users\\papch\\miniconda3\\lib\\site-packages\\torch\\optim\\lr_scheduler.py:65\u001b[0m, in \u001b[0;36m_LRScheduler.__init__.<locals>.with_counter.<locals>.wrapper\u001b[1;34m(*args, **kwargs)\u001b[0m\n\u001b[0;32m     63\u001b[0m instance\u001b[39m.\u001b[39m_step_count \u001b[39m+\u001b[39m\u001b[39m=\u001b[39m \u001b[39m1\u001b[39m\n\u001b[0;32m     64\u001b[0m wrapped \u001b[39m=\u001b[39m func\u001b[39m.\u001b[39m\u001b[39m__get__\u001b[39m(instance, \u001b[39mcls\u001b[39m)\n\u001b[1;32m---> 65\u001b[0m \u001b[39mreturn\u001b[39;00m wrapped(\u001b[39m*\u001b[39;49margs, \u001b[39m*\u001b[39;49m\u001b[39m*\u001b[39;49mkwargs)\n",
+      "File \u001b[1;32mc:\\Users\\papch\\miniconda3\\lib\\site-packages\\torch\\optim\\optimizer.py:88\u001b[0m, in \u001b[0;36mOptimizer._hook_for_profile.<locals>.profile_hook_step.<locals>.wrapper\u001b[1;34m(*args, **kwargs)\u001b[0m\n\u001b[0;32m     86\u001b[0m profile_name \u001b[39m=\u001b[39m \u001b[39m\"\u001b[39m\u001b[39mOptimizer.step#\u001b[39m\u001b[39m{}\u001b[39;00m\u001b[39m.step\u001b[39m\u001b[39m\"\u001b[39m\u001b[39m.\u001b[39mformat(obj\u001b[39m.\u001b[39m\u001b[39m__class__\u001b[39m\u001b[39m.\u001b[39m\u001b[39m__name__\u001b[39m)\n\u001b[0;32m     87\u001b[0m \u001b[39mwith\u001b[39;00m torch\u001b[39m.\u001b[39mautograd\u001b[39m.\u001b[39mprofiler\u001b[39m.\u001b[39mrecord_function(profile_name):\n\u001b[1;32m---> 88\u001b[0m     \u001b[39mreturn\u001b[39;00m func(\u001b[39m*\u001b[39;49margs, \u001b[39m*\u001b[39;49m\u001b[39m*\u001b[39;49mkwargs)\n",
+      "File \u001b[1;32mc:\\Users\\papch\\miniconda3\\lib\\site-packages\\torch\\autograd\\grad_mode.py:27\u001b[0m, in \u001b[0;36m_DecoratorContextManager.__call__.<locals>.decorate_context\u001b[1;34m(*args, **kwargs)\u001b[0m\n\u001b[0;32m     24\u001b[0m \u001b[39m@functools\u001b[39m\u001b[39m.\u001b[39mwraps(func)\n\u001b[0;32m     25\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mdecorate_context\u001b[39m(\u001b[39m*\u001b[39margs, \u001b[39m*\u001b[39m\u001b[39m*\u001b[39mkwargs):\n\u001b[0;32m     26\u001b[0m     \u001b[39mwith\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mclone():\n\u001b[1;32m---> 27\u001b[0m         \u001b[39mreturn\u001b[39;00m func(\u001b[39m*\u001b[39;49margs, \u001b[39m*\u001b[39;49m\u001b[39m*\u001b[39;49mkwargs)\n",
+      "File \u001b[1;32mc:\\Users\\papch\\miniconda3\\lib\\site-packages\\torch\\optim\\adamw.py:145\u001b[0m, in \u001b[0;36mAdamW.step\u001b[1;34m(self, closure)\u001b[0m\n\u001b[0;32m    142\u001b[0m         \u001b[39m# record the step after step update\u001b[39;00m\n\u001b[0;32m    143\u001b[0m         state_steps\u001b[39m.\u001b[39mappend(state[\u001b[39m'\u001b[39m\u001b[39mstep\u001b[39m\u001b[39m'\u001b[39m])\n\u001b[1;32m--> 145\u001b[0m     F\u001b[39m.\u001b[39;49madamw(params_with_grad,\n\u001b[0;32m    146\u001b[0m             grads,\n\u001b[0;32m    147\u001b[0m             exp_avgs,\n\u001b[0;32m    148\u001b[0m             exp_avg_sqs,\n\u001b[0;32m    149\u001b[0m             max_exp_avg_sqs,\n\u001b[0;32m    150\u001b[0m             state_steps,\n\u001b[0;32m    151\u001b[0m             amsgrad\u001b[39m=\u001b[39;49mamsgrad,\n\u001b[0;32m    152\u001b[0m             beta1\u001b[39m=\u001b[39;49mbeta1,\n\u001b[0;32m    153\u001b[0m             beta2\u001b[39m=\u001b[39;49mbeta2,\n\u001b[0;32m    154\u001b[0m             lr\u001b[39m=\u001b[39;49mgroup[\u001b[39m'\u001b[39;49m\u001b[39mlr\u001b[39;49m\u001b[39m'\u001b[39;49m],\n\u001b[0;32m    155\u001b[0m             weight_decay\u001b[39m=\u001b[39;49mgroup[\u001b[39m'\u001b[39;49m\u001b[39mweight_decay\u001b[39;49m\u001b[39m'\u001b[39;49m],\n\u001b[0;32m    156\u001b[0m             eps\u001b[39m=\u001b[39;49mgroup[\u001b[39m'\u001b[39;49m\u001b[39meps\u001b[39;49m\u001b[39m'\u001b[39;49m],\n\u001b[0;32m    157\u001b[0m             maximize\u001b[39m=\u001b[39;49mgroup[\u001b[39m'\u001b[39;49m\u001b[39mmaximize\u001b[39;49m\u001b[39m'\u001b[39;49m])\n\u001b[0;32m    159\u001b[0m \u001b[39mreturn\u001b[39;00m loss\n",
+      "File \u001b[1;32mc:\\Users\\papch\\miniconda3\\lib\\site-packages\\torch\\optim\\_functional.py:151\u001b[0m, in \u001b[0;36madamw\u001b[1;34m(params, grads, exp_avgs, exp_avg_sqs, max_exp_avg_sqs, state_steps, amsgrad, beta1, beta2, lr, weight_decay, eps, maximize)\u001b[0m\n\u001b[0;32m    149\u001b[0m     denom \u001b[39m=\u001b[39m (max_exp_avg_sqs[i]\u001b[39m.\u001b[39msqrt() \u001b[39m/\u001b[39m math\u001b[39m.\u001b[39msqrt(bias_correction2))\u001b[39m.\u001b[39madd_(eps)\n\u001b[0;32m    150\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[1;32m--> 151\u001b[0m     denom \u001b[39m=\u001b[39m (exp_avg_sq\u001b[39m.\u001b[39;49msqrt() \u001b[39m/\u001b[39m math\u001b[39m.\u001b[39msqrt(bias_correction2))\u001b[39m.\u001b[39madd_(eps)\n\u001b[0;32m    153\u001b[0m step_size \u001b[39m=\u001b[39m lr \u001b[39m/\u001b[39m bias_correction1\n\u001b[0;32m    155\u001b[0m param\u001b[39m.\u001b[39maddcdiv_(exp_avg, denom, value\u001b[39m=\u001b[39m\u001b[39m-\u001b[39mstep_size)\n",
+      "\u001b[1;31mRuntimeError\u001b[0m: CUDA out of memory. Tried to allocate 86.00 MiB (GPU 0; 6.00 GiB total capacity; 4.86 GiB already allocated; 0 bytes free; 5.29 GiB reserved in total by PyTorch) If reserved memory is >> allocated memory try setting max_split_size_mb to avoid fragmentation.  See documentation for Memory Management and PYTORCH_CUDA_ALLOC_CONF"
+     ]
+    }
+   ],
    "source": [
     "#empties cuda cache memory\n",
     "torch.cuda.empty_cache()\n",
@@ -1857,7 +1883,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1868,7 +1894,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1877,7 +1903,7 @@
        "<All keys matched successfully>"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1918,11 +1944,16 @@
     "\n",
     "predicted_labels, real_labels = inference(model, train_dl, device)\n",
     "\n",
-    "jaccard_scores = [jaccard_score(real, pred, average='samples') for real, pred in zip(real_labels, predicted_labels)]\n",
+    "real = np.array(real_labels).reshape(len(real_labels)*4, 100)\n",
+    "pred = np.array(predicted_labels).reshape(len(predicted_labels)*4,100)\n",
     "\n",
-    "average_jaccard = np.mean(jaccard_scores)\n",
+    "jaccard = jaccard_score(real, pred, average='samples')\n",
+    "recall = recall_score(real, pred, average='micro')\n",
+    "f1_score = f1_score(real, pred, average='micro')\n",
     "\n",
-    "print(\"Average Jaccard Similarity Score:\", average_jaccard)"
+    "print(\"The Jaccard Similarity Score of Test Set is:\", jaccard)\n",
+    "print(\"The Recall of Test Set is: \", recall)\n",
+    "print(\"The F1 Score of Test Set is: \", f1_score)"
    ]
   },
   {
